# kagami-pcloud-extract

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
